...
            "state" : "translated",
            "value" : "Attivo"
          }
        }
      }
    },
    "Add" : {
      "localizations" : {
        "de" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "Hinzufügen"
          }
...
            "state" : "translated",
            "value" : "Risultati del calcolo"
          }
        }
      }
    },
    "Cancel" : {
      "localizations" : {
        "de" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "Stornieren"
          }
...
            "state" : "translated",
            "value" : "Saldo corrente"
          }
        }
      }
    },
    "Current Balance" : {
      "localizations" : {
        "de" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "Aktueller Kontostand"
          }
...
            "state" : "translated",
            "value" : "Cibo e ristorazione"
          }
        }
      }
    },
    "Forecast" : {
      "localizations" : {
        "de" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "Vorhersage"
          }
...
            "state" : "translated",
            "value" : "Risparmi netti"
          }
        }
      }
    },
    "Net Worth" : {
      "localizations" : {
        "de" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "Nettovermögen"
          }
...
            "state" : "translated",
            "value" : "Nessun risultato"
          }
        }
      }
    },
    "No scheduled transactions" : {
      "localizations" : {
        "de" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "Keine geplanten Transaktionen"
          }
...
            "state" : "translated",
            "value" : "Proiettato"
          }
        }
      }
    },
    "Projected Balance" : {
      "localizations" : {
        "de" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "Projizierter Saldo"
          }
...
            "state" : "translated",
            "value" : "Salva simulazione"
          }
        }
      }
    },
    "Scheduled" : {
      "localizations" : {
        "de" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "Geplant"
          }
...
